# pypreg

./: README.md  pyproject.toml  requirements.txt
pypreg/: __init__.py
pypreg/adverse_pregnancy_outcomes/: __init__.py  adverse_pregnancy_outcomes.py  cesarean_mapping.py  fetal_growth_mapping.py  gestational_dm_mapping.py  gestational_ht_mapping.py  preeclampsia_mapping.py
pypreg/obstetric_comorbidity/: __init__.py  attach_map.py  bateman_mapping.py  leonard_mapping.py  obstetric_index.py  score.py
pypreg/pregnancy_outcome/: __init__.py  attach_map.py  outcome_map.py  process_outcome.py
pypreg/smm/: __init__.py  smm.py  smm_mapping.py
src/pypreg/adverse_pregnancy_outcomes/: __init__.py  adverse_pregnancy_outcomes.py  cesarean_mapping.py  fetal_growth_mapping.py  gestational_dm_mapping.py  gestational_ht_mapping.py  preeclampsia_mapping.py
src/pypreg/obstetric_comorbidity/: __init__.py  attach_map.py  bateman_mapping.py  leonard_mapping.py  obstetric_index.py  score.py
src/pypreg/pregnancy_outcome/: __init__.py  attach_map.py  outcome_map.py  process_outcome.py
src/pypreg/smm/: smm.py  smm_mapping.py
tests/: test.py
